# cook-docs

./: .gitignore  .goreleaser.yml  .pre-commit-config.yaml  .yamllint  404.html  Cargo.toml  README.md  Taskfile.yaml  go.mod  go.sum  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  zensical.toml
.agents/skills/: release-summary.md  release.md
.agents/skills/lint_fmt_fix/: SKILL.md
.github/workflows/: ci.yaml  release.yaml  test.yaml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
about/: index.html
cmd/cook-docs/: command_line.go  command_line_test.go  main.go
cmd/cook-docs/testdata/: My Test Recipe.cook  my-test-recipe.md  recipe.md.gotmpl  recipe.md.gotmpl.backup  test.cook
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/rust_migration_20260614/: metadata.json
conductor/archive/rust_release_workflow_20260618/: metadata.json
configuration/: index.html
docs/: CONTRIBUTING.md  README.md  about.md  configuration.md  index.md  installation.md  templates.md  usage.md
installation/: index.html
pkg/cook/: recipe_finder.go  recipe_finder.go.save  recipe_finder_test.go  recipe_info.go  recipe_info_test.go
pkg/document/: .generate.go.swp  generate.go  generate_test.go  template.go  template_test.go
pkg/types/: types.go
pkg/util/: file.go  file_test.go  git_test.go  ignore.go
search/: search_index.json
src/: config.rs  cook.rs  document.rs  lib.rs  main.rs  types.rs
templates/: index.html
testdata/: My Test Recipe.cook  recipe.md.gotmpl
tests/: integration_tests.rs
usage/: index.html
(+18 files in other folders)
