[package]
name = "cook-docs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
cooklang = "0.18.7"
env_logger = "0.11.10"
figment = { version = "0.10.19", features = ["toml", "env"] }
gtmpl-ng = "0.7.7"
log = "0.4.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
